# ml-rpg

./: .dockerignore  .fallowrc.json  .gitignore  AGENTS.md  CLOUDFLARE_AUDIT.md  DESIGN.md  Dockerfile  Dockerfile.api  Justfile  LICENSE.md  PRODUCT.md  README.md  app.config.ts  biome.json  docker-compose.yaml  draft-cloudflare-workers-migration-phase-2.md  lora_config.yaml  package.json  plan-cloudflare-compatibility-poc.md  plan-cloudflare-environments.md  plan-monorepo-restructure.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sqlc-gen-ts-d1.wasm  sqlc.yaml  tsconfig.json  vitest.config.ts  wrangler.jsonc
.dex/: tasks.jsonl
.github/workflows/: ci.yml
.husky/: pre-push
.impeccable/: design.json
apps/llama-api/: .dockerignore  Dockerfile
apps/rag-api/: Dockerfile
apps/web/: .dockerignore  Dockerfile  app.config.timestamp_1784291039119.js  app.config.ts  package.json  tsconfig.json  vitest.config.ts
cron/: wrangler.jsonc
cron/src/: index.ts
data/: ml_urls.csv  sitemap.xml
llama_api/: .gitignore  Dockerfile  entrypoint.sh  lora_config.yaml  start.sh  train_bob.sh
llama_api/__tests__/: test_scripts.py  test_utils.py
llama_api/scripts/: clean_raw_data.py  eval_model.py  extract_platform_data.py  generate_training_data.py  patch-gguf-converter.sh  preprocessing.py  prompts.py  utils.py
migrations/: 0001_initial.sql  0002_content_metadata.sql  0003_users_progress.sql  0004_lesson_highlights.sql  0005_drop_content_version.sql  0006_drop_redundant_indexes.sql
public/: search-index.json
public/search/: index.json
rag-api/: Dockerfile  app.py  config.py
rag-api/__tests__/: test_app.py  test_vector_search.py
rag-api/rag_api/: app.py  config.py  schemas.py
rag-api/retrieval/: __init__.py  embedding.py  keyword_extraction.py  vector_search.py
rag_api/: Dockerfile  app.py  config.py  schemas.py
scripts/: acronyms.ts  backup-and-wipe-content.sql  build-index.ts  build-search-index.ts  convert-db-to-sql.ts  data-curriculum-with-orders.json  data-curriculum.json  deploy-production.sh  deploy-staging.sh  deploy.sh  dev-watch.sh  dev.sh  enrich_orders.py  export-d1-content.ts  extract-orders.ts  extract_data_urls.py  generate-db-data.ts  refactor-urls.js  restore-progress.sql  scrape-lessons.ts  scrape_lessons.py  seed-course-db.ts  seed-d1-local.sh  seed-d1-staging.sh  seed-db.ts  seed-local.sh  seed-production.sh  seed-staging.sh  seed.sh  seed.ts  start-dev.sh  test-render.mjs  train-bob.sh  wipe-content.sql
spacy-api/: Dockerfile  app.py  greetings.csv  pyproject.toml
src/: app.css  app.tsx  entry-client.tsx  entry-server.tsx  global.d.ts  legacy-shim.css
src/data/: types.ts  (+2 more)
(+1297 files in other folders)
