[project]
name = "ml-rpg"
version = "0.1.0"
description = "ML-RPG - Backend services (RAG API + training scripts)"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "spacy>=3.8.0",
  "lancedb>=0.18.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.1.0",
  "pip>=26.1.1",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.28.0", "debugpy>=1.8.0"]
train = ["mlx-lm>=0.20.0"]

[tool.setuptools.packages.find]
include = ["rag_api*"]
