[project]
name = "ml-rpg"
version = "0.1.0"
description = "ML-RPG - Backend services (RAG API + training scripts)"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "spacy>=3.8.0",
  "lancedb>=0.18.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.1.0",
  "pip>=26.1.1",
  "pydantic>=2.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "debugpy>=1.8.0"]
train = [
  "mlx-lm>=0.20.0",
  "distilabel>=1.5.0",
  "instructor>=1.0.0",
  "beautifulsoup4>=4.12.0",
  "tqdm>=4.66.0",
  "torch>=2.6.0",
]

[tool.setuptools.packages.find]
include = ["rag_api*"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F", "E", "W"]
ignore = ["E402", "E501"]

[tool.ruff.lint.isort]
force-single-line = false
order-by-type = false
